--- a/contact.html
+++ b/contact.html
@@ -567,7 +567,7 @@
                                 <div class="contact-icon">📍</div>
                                 <div class="contact-text">
                                     <h4>Office</h4>
-                                    <p style="color: var(--gray-600);">Mumbai · Bangalore · Delhi (Virtual)</p>
+                                    <p style="color: var(--gray-600);"> Bangalore (Virtual)</p>
                                 </div>
                             </div>
 
@@ -732,5 +732,6 @@
         }
     </script>
 </body>
+
 
 </html>
